--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -12066,6 +12066,10 @@ body.sidebar-toggled footer.sticky-footer {
 	color:red
 	
 }
+.vert{
+	color:Green
+	
+}
 div#sncf{
 	background-image:url("../img/SNCF_Réseau.png");
 	background-repeat:no-repeat;
