--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item active">
-        <a class="nav-link" href="#"  data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+        <a class="nav-link" href="AHT"  data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
           <i class="fas fa-fw fa-cog"></i>
           <span>Créer l'AHT</span>
         </a>
@@ -212,12 +212,17 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
             <div class="col-lg-6">
 
-               <!-- Basic Card Example -->
-              <div class="card shadow mb-4">
+               <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Créer l'AHT</h6>
+                  <a href="AHT" class="btn btn-primary btn-icon-split">
+                    <span class="icon text-white-50">
+                      <i class="fas fa-cloud-upload-alt"></i>
+                    </span>
+                    <span class="text">Créer l'AHT</span>
+                  </a>
                 </div>
                 <div class="card-body">
+               
                   The styling for this basic card example is created by using default Bootstrap utility classes. By using utility classes, the style of the card component can be easily modified with no need for any custom CSS!
                 </div>
               </div>
