--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -198,15 +198,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                 </div>
               </div>
 
-              <!-- Basic Card Example -->
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Basic Card Example</h6>
-                </div>
-                <div class="card-body">
-                  The styling for this basic card example is created by using default Bootstrap utility classes. By using utility classes, the style of the card component can be easily modified with no need for any custom CSS!
-                </div>
-              </div>
+             
 
             </div>
 
@@ -218,23 +210,19 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                     <span class="icon text-white-50">
                       <i class="fas fa-cloud-upload-alt"></i>
                     </span>
-                    <span class="text">Créer l'AHT</span>
+                    <span class="text">Créer et modifier l'AHT</span>
                   </a>
                 </div>
                 <div class="card-body">
-               
-                  The styling for this basic card example is created by using default Bootstrap utility classes. By using utility classes, the style of the card component can be easily modified with no need for any custom CSS!
+                -	   Générer, créer, modifier et supprimer l’AHT 
+				/Confirmer les modifications 
+				/     Exporter l’AHT en format Excel
+
+                  
                 </div>
               </div>
                <!-- Basic Card Example -->
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Basic Card Example</h6>
-                </div>
-                <div class="card-body">
-                  The styling for this basic card example is created by using default Bootstrap utility classes. By using utility classes, the style of the card component can be easily modified with no need for any custom CSS!
-                </div>
-              </div>
+             
 
             </div>
 
@@ -250,9 +238,11 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2019</span>
-          </div>
-        </div>
+          
+             <head>
+    <title>SpringBoot Excel</title>
+  </head>
+  
       </footer>
       <!-- End of Footer -->
 
@@ -295,6 +285,8 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
+
+ 
 
 </body>
 
