--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -10,7 +10,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Importation des données</title>
+  <title>Importation de données</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -44,7 +44,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
       <li class="nav-item active">
         <a class="nav-link" href="upload">
         <i class="fas fa-cloud-upload-alt"></i>
-          <span>Importez les donnés</span></a>
+          <span>Import de données</span></a>
       </li>
 
       <!-- Divider -->
@@ -89,14 +89,14 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
       <li class="nav-item">
         <a class="nav-link" href="charts.html">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>vide1</span></a>
+          <span></span></a>
       </li>
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
         <a class="nav-link" href="tables.html">
           <i class="fas fa-fw fa-table"></i>
-          <span>vide2</span></a>
+          <span></span></a>
       </li>
 
       <!-- Divider -->
@@ -186,7 +186,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 					
 				</form>
                   <div th:if="${message}">
-					<span class=red th:text="${message}"/></span>
+					<span class=vert th:text="${message}"/></span>
 					
 				</div>
                   
@@ -196,7 +196,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
               <!-- Basic Card Example -->
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Liste des ZEPS SNORD</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">Liste des ZEP CCT de Lyon</h6>
                 </div>
                 <div class="card-body">
                  <form method="POST" enctype="multipart/form-data" id="fileUploadForm"  action="uploadfileSNORD">
@@ -228,7 +228,25 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				<div th:if="${messageA}">
 					<span class=red th:text="${messageA}"/>
 				</div></div>
+				</div>
+				  <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-primary">Train encadrant CCT de Lyon </h6>
+                </div>
+                <div class="card-body">
+                 <form method="POST" enctype="multipart/form-data" id="fileUploadForm"  action="uploadfileSNORD">
+					<div class="form-group">
+						<label class="control-label" for="uploadfileSNORD">selectionnez un fichier:</label>
+						<input type="file" class="form-control" id="uploadfileSNORD" placeholder="Upload File"  name="uploadfileSNORD"></input>
+					</div>
+					
+					<button style="width:100px;"  type="submit" class="btn btn-primary btn-icon-split" id="btnSubmit">Importer</button>
+				</form>
+				<div th:if="${messageTTX}">
+					<span class=red th:text="${messageTTx}"/>
+				</div></div>
               </div>
+              
  <!-- Basic Card Example -->
               
             </div>
@@ -238,7 +256,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                <!-- Basic Card Example -->
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Liste des ZEPS SSUD</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">Liste des ZEP Marseille poste 1 </h6>
                 </div>
                 <div class="card-body">
                  <form method="POST" enctype="multipart/form-data" id="fileUploadForm" action="uploadfileSSUD">
@@ -289,6 +307,28 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				<div th:if="${messageTTX}">
 					<span class=red th:text="${messageTTx}"/>
 				</div></div>
+				</div>
+				  <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-primary">Traain encadrant Marseille poste 1</h6>
+                </div>
+                <div class="card-body">
+                 <form method="POST" enctype="multipart/form-data" id="fileUploadForm"  action="uploadfileSNORD">
+					<div class="form-group">
+						<label class="control-label" for="uploadfileSNORD">selectionnez un fichier:</label>
+						<input type="file" class="form-control" id="uploadfileSNORD" placeholder="Upload File"  name="uploadfileSNORD"></input>
+					</div>
+					
+					<button style="width:100px;"  type="submit" class="btn btn-primary btn-icon-split" id="btnSubmit">Importer</button>
+				</form>
+				<div th:if="${messageTTX}">
+					<span class=red th:text="${messageTTx}"/>
+				</div></div>
+				
+				
+				
+				
+				
             </div>
 
           </div>
